--- a/styles.css
+++ b/styles.css
@@ -939,48 +939,57 @@ main {
     }
 
     #footer {
-        padding: 25px 0 5px;
+        padding: 15px 0 5px;
     }
     
     .footer-content {
         flex-direction: column;
-        gap: 5px;
-        margin-bottom: 10px;
+        gap: 2px;
+        margin-bottom: 5px;
     }
 
     .footer-section {
-        margin-bottom: 5px;
-    }
-    
-    .footer-section p {
-        margin-bottom: 3px;
+        margin-bottom: 2px;
+        margin-top: 0;
+        padding: 0;
     }
     
     .footer-section h3 {
-        margin-bottom: 8px;
-        padding-bottom: 5px;
+        margin-bottom: 3px;
+        padding-bottom: 2px;
+        margin-top: 0;
     }
     
     .footer-section h3::after {
         width: 30px;
+        height: 1px;
+    }
+    
+    .footer-section p {
+        margin-bottom: 1px;
+        margin-top: 0;
+        line-height: 1.3;
     }
     
     .social-icons {
-        gap: 10px;
-        margin-top: 8px;
+        gap: 8px;
+        margin-top: 2px;
+        margin-bottom: 0;
     }
     
     .social-icons a {
-        width: 45px;
-        height: 45px;
+        width: 35px;
+        height: 35px;
+        margin: 0;
     }
     
     .social-icons a i {
-        font-size: 1.6rem;
+        font-size: 1.4rem;
     }
     
     .footer-bottom {
-        padding-top: 5px;
+        padding-top: 3px;
+        margin-top: 2px;
     }
     
     .schedule-selectors {
@@ -1005,6 +1014,19 @@ main {
     
     .schedule-card-day, .schedule-card-class {
         margin-bottom: 5px;
+    }
+    
+    .compact-info {
+        display: flex;
+        flex-direction: column;
+        margin: 0;
+        padding: 0;
+    }
+    
+    .compact-info p {
+        margin: 0 0 1px 0;
+        padding: 0;
+        line-height: 1.2;
     }
 }
 
@@ -1324,4 +1346,14 @@ main {
     height: 450px;
     border: 0;
     display: block;
+}
+
+.compact-info {
+    display: flex;
+    flex-direction: column;
+}
+
+.compact-info p {
+    margin-bottom: 8px;
+    opacity: 0.8;
 } 
